# mini-grid-optimization-tool

./: .dockerignore  .gitignore  .npmrc  Dockerfile  Makefile  README.md  docker-compose.yml  eslint.config.mjs  example.env  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
.github/workflows/: backend_deploy.yml  build-offline.yml  c4g_cd.yml  c4g_ci.yaml
backend/: .vercelignore  Dockerfile  README.md  build-solver.py  build-solver.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run-solver.py  server.py  vercel.json
backend/mini_grid_solver/: testing.py
backend/mini_grid_solver/mixins/: costs.py  geo.py  graph.py  post_processor.py
backend/mini_grid_solver/solvers/: __init__.py  base_mini_grid_solver.py  disk_based_steiner_solver.py  greedy_iter_steiner_solver.py  local_opt.py  mst_solver.py
backend/mini_grid_solver/src/solvers/: __init__.py  base_mini_grid_solver.py  biniaz_disk_steiner_solver.py  candidate_generation.py  candidate_mst_solver.py  disk_based_steiner_solver.py  fermat_mst_solver.py  greedy_iter_steiner_solver.py  local_opt.py  mst_solver.py  registry.py  steinerized_mst.py
backend/mini_grid_solver/src/utils/: models.py  registry.py
backend/mini_grid_solver/tests/solvers/: test_solvers.py
backend/mini_grid_solver/tests/test_data_sets/: BuildingCoordinate(2).csv  BuildingCoordinate2.csv  BuildingCoordinates.csv  bc1.kml  minigrid_2026-04-07.kml  renewvia_ground_truth_poles_only.kml
backend/mini_grid_solver/utils/: __init__.py  models.py
backend/tests/solvers/: test_solvers.py
backend/tests/test_data_sets/: bc2.kml  minigrid_2026-04-08.kml  minigrid_2026-04-09.kml  renewvia_ground_truth.kml  renewvia_ground_truth_terminals_only.kml
docs/: ARCHITECTURE.md
electron/: after-pack.js  icon.icns  loading.html  main.js  package.json  preload.js  setup.html
prisma/: seed.ts
prisma/schema/: mini-grid-result.prisma  user-role.prisma  user.prisma
prisma/schema-offline/: config.prisma  mini-grid-result.prisma  user.prisma
prisma/seed/: users.mjs
public/: sw.js
scripts/: build-electron.ts  build-offline-bundle.ts  initialize-offline.ts  initialize.ts  offline-setup.sh  offline-start.sh  package-offline.ts  start-offline.ts
src/: page.tsx
src/app/: globals.css  (+3 more)
types/: next-auth.d.ts
(+57 files in other folders)
