[project]
name = "mini-grid-solver"
version = "0.1.0"
description = "Backend Server for the Mini-grid Optimization Tool"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fastapi==0.135.3",
    "fonttools==4.62.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "lxml==6.0.2",
    "matplotlib==3.10.8",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "numpy-typing-compat==20251206.2.4",
    "optype==0.17.0",
    "packaging==26.0",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "platformdirs>=4.0",
    "pluggy==1.6.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pykml==0.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "scipy-stubs==1.17.1.3",
    "shapely==2.1.2",
    "six==1.17.0",
    "starlette==1.0.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn[standard]>=0.44.0",
]

[tool.setuptools.packages.find]
where = ["mini_grid_solver"]
include = ["*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fastapi==0.135.3",
    "fonttools==4.62.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "lxml==6.0.2",
    "matplotlib==3.10.8",
    "mini-grid-solver",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "packaging==26.0",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "platformdirs>=4.0",
    "pluggy==1.6.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pykml==0.2.0",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "shapely==2.1.2",
    "six==1.17.0",
    "starlette==1.0.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]


